Added papeclip and configurationa my app

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,9 @@
-<p id="notice"><%= notice %></p>
+
+
+<p>
+  <strong>Image:</strong>
+  <%= image_tag @movie.image.url(:medium) %>
+</p>
 
 <p>
   <strong>Title:</strong>
