--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<!--
 <h1>Movies</h1>
 
 <table>
@@ -15,21 +16,42 @@
   </thead>
 
   <tbody>
-    <% @movies.each do |movie| %>
+    < @movies.each do |movie| >
       <tr>
-        <td><%= link_to image_tag(movie.image.url(:medium)), movie  %></td>
-        <td><%= movie.title %></td>
-        <td><%= movie.description %></td>
-        <td><%= movie.movie_length %></td>
-        <td><%= movie.director %></td>
-        <td><%= movie.rating %></td>
-        <td><%= link_to 'Show', movie %></td>
-        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><= link_to image_tag(movie.image.url(:medium)), movie  %></td>
+        <td><= movie.title %></td>
+        <td><= movie.description %></td>
+        <td><= movie.movie_length %></td>
+        <td><= movie.director %></td>
+        <td><= movie.rating %></td>
+        <td><= link_to 'Show', movie %></td>
+        <td><= link_to 'Edit', edit_movie_path(movie) %></td>
+        <td><= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+    < end %>
   </tbody>
 </table>
+-->
+
+
+<% if !user_signed_in? %>
+  <div class="jumbotron">
+    <h1>Your Favorite Movies Reviewed</h1>
+    <p>Hashtag hoodie mumblecore selfies. Authentic keffiyeh leggings Kickstarter, narwhal jean shorts XOXO Vice Austin cardigan. Organic drinking vinegar freegan pickled.</p>
+    <p><%= link_to "Sign Up To Write A Review", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+  </div>
+<% end %>
+
+<div class="row">
+  <% @movies.each do |movie| %>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
 
 <br>
 
