--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -14,6 +14,11 @@
   <div class="field">
     <div id="star-rating"></div>
   </div>
+
+  <div class="field">
+    <%= f.label :rating %><br>
+    <%= f.number_field :rating %>
+  </div>
   <div class="field">
     <%= f.label :comment %><br>
     <%= f.text_area :comment %>
