--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -15,10 +15,7 @@
     <div id="star-rating"></div>
   </div>
 
-  <div class="field">
-    <%= f.label :rating %><br>
-    <%= f.number_field :rating %>
-  </div>
+
   <div class="field">
     <%= f.label :comment %><br>
     <%= f.text_area :comment %>
@@ -27,3 +24,11 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+
+<script>
+  $('#star-rating').raty({
+      path: '/assets',
+      scoreName: 'review[rating]'
+  })
+</script>
